// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileHeader - Snapshots > matches snapshot for left button 1`] = `
<button
  class="p-2 hover:bg-secondary/10 rounded-full transition-colors"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-sliders-horizontal h-6 w-6"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="21"
      x2="14"
      y1="4"
      y2="4"
    />
    <line
      x1="10"
      x2="3"
      y1="4"
      y2="4"
    />
    <line
      x1="21"
      x2="12"
      y1="12"
      y2="12"
    />
    <line
      x1="8"
      x2="3"
      y1="12"
      y2="12"
    />
    <line
      x1="21"
      x2="16"
      y1="20"
      y2="20"
    />
    <line
      x1="12"
      x2="3"
      y1="20"
      y2="20"
    />
    <line
      x1="14"
      x2="14"
      y1="2"
      y2="6"
    />
    <line
      x1="8"
      x2="8"
      y1="10"
      y2="14"
    />
    <line
      x1="16"
      x2="16"
      y1="18"
      y2="22"
    />
  </svg>
</button>
`;

exports[`MobileHeader - Snapshots > matches snapshot for logo 1`] = `
<div
  data-height="30"
  data-testid="logo"
  data-width="90"
>
  Logo
</div>
`;

exports[`MobileHeader - Snapshots > matches snapshot for right button 1`] = `
<button
  class="p-2 hover:bg-secondary/10 rounded-full transition-colors"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-activity h-6 w-6"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
    />
  </svg>
</button>
`;

exports[`MobileHeader - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="lg:hidden fixed top-0 left-0 right-0 z-30 bg-background/80 backdrop-blur-sm border-b border-border/20 custom-header"
>
  <div
    class="flex items-center justify-between px-4 h-16"
  >
    <button
      class="p-2 hover:bg-secondary/10 rounded-full transition-colors"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-horizontal h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="21"
          x2="14"
          y1="4"
          y2="4"
        />
        <line
          x1="10"
          x2="3"
          y1="4"
          y2="4"
        />
        <line
          x1="21"
          x2="12"
          y1="12"
          y2="12"
        />
        <line
          x1="8"
          x2="3"
          y1="12"
          y2="12"
        />
        <line
          x1="21"
          x2="16"
          y1="20"
          y2="20"
        />
        <line
          x1="12"
          x2="3"
          y1="20"
          y2="20"
        />
        <line
          x1="14"
          x2="14"
          y1="2"
          y2="6"
        />
        <line
          x1="8"
          x2="8"
          y1="10"
          y2="14"
        />
        <line
          x1="16"
          x2="16"
          y1="18"
          y2="22"
        />
      </svg>
    </button>
    <div
      data-height="30"
      data-testid="logo"
      data-width="90"
    >
      Logo
    </div>
    <button
      class="p-2 hover:bg-secondary/10 rounded-full transition-colors"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`MobileHeader - Snapshots > matches snapshot with custom onLeftIconClick 1`] = `
<div
  class="lg:hidden fixed top-0 left-0 right-0 z-30 bg-background/80 backdrop-blur-sm border-b border-border/20"
>
  <div
    class="flex items-center justify-between px-4 h-16"
  >
    <button
      class="p-2 hover:bg-secondary/10 rounded-full transition-colors"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-horizontal h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="21"
          x2="14"
          y1="4"
          y2="4"
        />
        <line
          x1="10"
          x2="3"
          y1="4"
          y2="4"
        />
        <line
          x1="21"
          x2="12"
          y1="12"
          y2="12"
        />
        <line
          x1="8"
          x2="3"
          y1="12"
          y2="12"
        />
        <line
          x1="21"
          x2="16"
          y1="20"
          y2="20"
        />
        <line
          x1="12"
          x2="3"
          y1="20"
          y2="20"
        />
        <line
          x1="14"
          x2="14"
          y1="2"
          y2="6"
        />
        <line
          x1="8"
          x2="8"
          y1="10"
          y2="14"
        />
        <line
          x1="16"
          x2="16"
          y1="18"
          y2="22"
        />
      </svg>
    </button>
    <div
      data-height="30"
      data-testid="logo"
      data-width="90"
    >
      Logo
    </div>
    <button
      class="p-2 hover:bg-secondary/10 rounded-full transition-colors"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`MobileHeader - Snapshots > matches snapshot with default props 1`] = `
<div
  class="lg:hidden fixed top-0 left-0 right-0 z-30 bg-background/80 backdrop-blur-sm border-b border-border/20"
>
  <div
    class="flex items-center justify-between px-4 h-16"
  >
    <button
      class="p-2 hover:bg-secondary/10 rounded-full transition-colors"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-horizontal h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="21"
          x2="14"
          y1="4"
          y2="4"
        />
        <line
          x1="10"
          x2="3"
          y1="4"
          y2="4"
        />
        <line
          x1="21"
          x2="12"
          y1="12"
          y2="12"
        />
        <line
          x1="8"
          x2="3"
          y1="12"
          y2="12"
        />
        <line
          x1="21"
          x2="16"
          y1="20"
          y2="20"
        />
        <line
          x1="12"
          x2="3"
          y1="20"
          y2="20"
        />
        <line
          x1="14"
          x2="14"
          y1="2"
          y2="6"
        />
        <line
          x1="8"
          x2="8"
          y1="10"
          y2="14"
        />
        <line
          x1="16"
          x2="16"
          y1="18"
          y2="22"
        />
      </svg>
    </button>
    <div
      data-height="30"
      data-testid="logo"
      data-width="90"
    >
      Logo
    </div>
    <button
      class="p-2 hover:bg-secondary/10 rounded-full transition-colors"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;
